# our local GN stuff
#

v8_executable("anticent") {
  sources = [
    "../src/anticent/anticent.cc",
    "../src/anticent/v8main.cc",
    "../src/anticent/process.cc",
    "../src/anticent/db.cc",
    "../src/anticent/sqlite3.c",
  ]

  configs = [
    # Note: don't use :internal_config here because this target will get
    # the :external_config applied to it by virtue of depending on :v8, and
    # you can't have both applied to the same target.
    ":internal_config_base",
  ]

  deps = [
    ":v8",
    ":v8_libbase",
    ":v8_libplatform",
    "//build/win:default_exe_manifest",
  ]
}
